before after slider

--- a/homepage.html
+++ b/homepage.html
@@ -105,14 +105,36 @@
                     <div class="carousel-inner normal-text" style="text-align: center">
                         <div class="carousel-item active fw-bold">
 
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipisicing."</p>
+                            <p>"All of the manual input and data entry takes too much time."</p>
                         </div>
                         <div class="carousel-item  fw-bold">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipisicing."</p>
+                            <p>"Why can’t I see the accounts payable workflow? I’m a VP of Finance, why is this a
+                                struggle?"</p>
 
                         </div>
                         <div class="carousel-item  fw-bold">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipisicing."</p>
+                            <p>"Ugh, a pending invoice issue again?"</p>
+
+                        </div>
+                        <div class="carousel-item  fw-bold">
+                            <p>"Where’s that document I need?"</p>
+
+                        </div>
+                        <div class="carousel-item  fw-bold">
+                            <p>"This audit is stressful enough; why can’t I find all of the documentation for it?"</p>
+
+                        </div>
+                        <div class="carousel-item  fw-bold">
+                            <p>"Oh great, another emergency payment. 🙄"</p>
+
+                        </div>
+                        <div class="carousel-item  fw-bold">
+                            <p>"How are we going to scale our team to keep up with these invoices? Maybe I’m thinking
+                                too big."</p>
+
+                        </div>
+                        <div class="carousel-item  fw-bold">
+                            <p>"You’re not thinking too big. You need a software that can think big with you"</p>
 
                         </div>
                     </div>
@@ -142,6 +164,16 @@
                     aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                    aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                    aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+                    aria-label="Slide 8"></button>
         </div>
     </div>
 
@@ -165,18 +197,45 @@
                     <p class="mid-text fw-bold" style="padding-top: 2rem !important;;padding-left: 3rem !important;">To
                         Do List</p>
                     <ul class="list-items-container">
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <li data-list="before" class="list-item small-text">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit.
                             Laborum, similique?
                         </li>
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer.</li>
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <li data-list="before" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer.
+                        </li>
+                        <li data-list="before" class="list-item small-text">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit.
                             Eaque.
                         </li>
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer adipiscing.</li>
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet.</li>
-                        <li class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer adipiscing.</li>
+                        <li data-list="before" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer
+                            adipiscing.
+                        </li>
+                        <li data-list="before" class="list-item small-text">
+                            Lorem ipsum dolor sit amet.</li>
+                        <li data-list="before" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer
+                            adipiscing.
+                        </li>
+                        <li data-list="after" class="list-item small-text">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit.
+                            Laborum, similique?2
+                        </li>
+                        <li data-list="after" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer.2
+                        </li>
+                        <li data-list="after" class="list-item small-text">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit.
+                            Eaque.2
+                        </li>
+                        <li data-list="after" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer
+                            adipiscing.2
+                        </li>
+                        <li data-list="after" class="list-item small-text">
+                            Lorem ipsum dolor sit amet.2</li>
+                        <li data-list="after" class="list-item small-text">Lorem ipsum dolor sit amet, consectetuer
+                            adipiscing.2
+                        </li>
                     </ul>
-                    <img class="position-absolute" style="top: -23px;left: 54%" src="images/Before-After%20Slider.svg"
+                    <img class="position-absolute draggable" style="top: -23px;left: 383px;"
+                         src="images/Before-After%20Slider.svg"
                          alt="">
                     <div class="position-absolute discount-sticker d-flex justify-content-center align-items-center">
                         <div class="fw-bold" style="font-size: 16px">
@@ -348,6 +407,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
