--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </div>
 </div>
 <nav
-        class="navbar hide1400 navbar-expand-lg bg-transparent position-absolute w-100"
+        class="navbar navbar-expand-lg bg-blue  w-100"
 >
     <div class="container-fluid">
         <div class="navbar-brand" href="#">
@@ -112,8 +112,208 @@
         </div>
     </div>
 </nav>
+<header class="about-header pt-5 mt-5 pb-5 mb-5">
+    <div class="my-container d-flex justify-content-center " style="gap: 100px">
+        <div class="w-50">
+            <p class="text-black mid-text fw-black pb-3">Our purpose is to make sure <br> you do your best work.</p>
+            <p class="text-black normal-text">
+                None of our team members said when I grow up, I want to contribute to the accounts payable landscape;
+                yet
+                here we are, creating a system for companies ranging from the early start-up to the 7-figure
+                number-crunchers.
+                <br><br>
+                What makes us wake up excited about DocLib is that we’re a like-minded group aligned with
+                keeping our values in the foreground.
+            </p>
+        </div>
+        <div class="about-header-headshot">
+            <img src="./images/Gary%20Headshot.png" style="width: 337px;height: 443px" alt="">
+            <div class="position-absolute d-flex " style="bottom: 20px;gap: 10px;
+                left: 20px;
+                z-index: 10;">
 
+                <img src="./images/blue-play.svg" alt="">
+                <p class="text-white mid-text fw-bold d-inline-block">Hello.</p>
+            </div>
 
+            <img class="position-absolute" src="./images/Overlay.svg" alt="" style="bottom: 0;
+    left: 0;">
+        </div>
+
+    </div>
+</header>
+<section style="width: 95%; padding-right: 5rem;height: fit-content;margin-left: auto"
+         class="d-flex justify-content-end bg-light-grey position-relative">
+    <div class="text-white doclib-approach fw-bolder mid-text bg-blue position-absolute">
+        Here’s the DocLib approach:
+    </div>
+
+    <div class="approaches" style="width: 50%;">
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false"
+                 aria-controls="collapseExample1" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Open-Minded%20Icon.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                People-Driven Solutions
+            </div>
+            <p id="collapseExample1" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false"
+                 aria-controls="collapseExample2" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Open-Minded%20Icon.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                Open Minded
+            </div>
+            <p id="collapseExample2" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false"
+                 aria-controls="collapseExample3" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Honesty%20Icon.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                Honesty
+            </div>
+            <p id="collapseExample3" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false"
+                 aria-controls="collapseExample4" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Humble%20Go-Getters.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                Humble Go-Getters
+            </div>
+            <p id="collapseExample4" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false"
+                 aria-controls="collapseExample1" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Grit%20Icon.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                Grit
+            </div>
+            <p id="collapseExample5" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+        <div class="approach d-block m-auto">
+            <div data-bs-toggle="collapse" data-bs-target="#collapseExample6" aria-expanded="false"
+                 aria-controls="collapseExample6" class="mid-text text-black fw-black position-relative approach-title">
+                <img src="./images/Loyalty%20Icon.svg" alt="" class="position-absolute toggle-icon">
+                <img class="position-absolute arrow-black" src="./images/Artwork%2023.svg" alt="">
+                Loyalty
+            </div>
+            <p id="collapseExample6" class="collapse text-black normal-text">No matter the industry, people are at the
+                core. We seek to find what will
+                help serve people, which–in
+                turn–will make their teams and organizations stronger. While some processes can be automated, serving
+                long-term clients is crafted with an empathetic and tailored lens.</p>
+        </div>
+    </div>
+</section>
+<section class="w-100 " style="height: fit-content">
+    <div class="my-container">
+        <p class="mid-text text-black fw-bold text-center">The faces behind the screen:</p>
+        <p class="normal-text text-black text-center w-50 m-auto">
+            Our team is peppered throughout the United States: seasoned pros that come together virtually to help your
+            team succeed.
+        </p>
+
+        <div class="row mt-5">
+            <div class="col-lg-3 mt-4 mb-4">
+                <div class="headshot">
+                    <img src="./images/Joey%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Stephen Rosenthal</p>
+                        <p class="small-text text-white">CEO + Owner</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <div class="headshot">
+                    <img src="./images/Gary%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Gary Pasky</p>
+                        <p class="small-text text-white">COO</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <div class="headshot">
+                    <img src="./images/Hershel%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Hershel Mistry</p>
+                        <p class="small-text text-white">Director of Finance & Director of People & Culture</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <div class="headshot">
+                    <img src="./images/Justin%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Justin Gavin</p>
+                        <p class="small-text text-white">R&D Manager</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <div class="headshot">
+
+                    <img src="./images/Marcus%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Marcus Peterson</p>
+                        <p class="small-text text-white">Development Manager</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <div class="headshot">
+                    <img  src="./images/Melissa%20Headshot.png" alt="">
+                    <div class="headshot-text position-absolute">
+                        <p class="normal-text text-white fw-bold">Melissa Sin</p>
+                        <p class="small-text text-white">Solutions Engineer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/Scott%20Headshot.png" alt="">
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/Steven%20Headshot.png" alt="">
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/Michael%20Headshot.png" alt="">
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/Vanessa%20Headshot.png" alt="">
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/Joseph%20Headshot.png" alt="">
+            </div>
+            <div class="col-lg-3  mt-4 mb-4">
+                <img class="headshot" src="./images/No%20Headshot.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
 <footer
         class="w-100  vh-100 bg-red position-relative overflow-hidden d-flex justify-content-center position-relative flex-column align-items-center"
         style="padding-top: 10rem; padding-bottom: 5rem"
